--- a/RPG/RPG/RPG.vcxproj
+++ b/RPG/RPG/RPG.vcxproj
@@ -146,14 +146,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="16_true_type_fonts.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="BaseGameEngine.cpp" />
+    <ClCompile Include="MapTile.cpp" />
     <ClCompile Include="RpgGameEngine.cpp" />
+    <ClCompile Include="Texture.cpp" />
     <ClCompile Include="ZoneMap.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseGameEngine.h" />
+    <ClInclude Include="MapTile.h" />
     <ClInclude Include="RpgGameEngine.h" />
+    <ClInclude Include="Texture.h" />
     <ClInclude Include="ZoneMap.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
