continue the refactor

--- a/RPG/RPG/RPG.vcxproj.filters
+++ b/RPG/RPG/RPG.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="RpgWorldBuilderScene.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TileGridScene.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseGameEngine.h">
@@ -120,6 +123,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="RpgWorldBuilderScene.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TileGridScene.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
