satarted overworld scene

--- a/RPG/RPG/RPG.vcxproj
+++ b/RPG/RPG/RPG.vcxproj
@@ -154,13 +154,14 @@
     <ClCompile Include="MapTile.cpp" />
     <ClCompile Include="MenuButton.cpp" />
     <ClCompile Include="Player.cpp" />
-    <ClCompile Include="RpgGameButtons.cpp" />
-    <ClCompile Include="RpgGameEngine.cpp" />
-    <ClCompile Include="RpgGameMenus.cpp" />
+    <ClCompile Include="RpgGameEngineOldCode.cpp" />
+    <ClCompile Include="RpgOverWorldScene.cpp" />
     <ClCompile Include="RpgWorldBuilderScene.cpp" />
+    <ClCompile Include="RpgWorldBuilderSceneMenus.cpp" />
     <ClCompile Include="SaveAttribute.cpp" />
     <ClCompile Include="SaveObject.cpp" />
     <ClCompile Include="SaveFile.cpp" />
+    <ClCompile Include="RpgWorldBuilderSceneButtons.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="TileGridScene.cpp" />
@@ -175,7 +176,9 @@
     <ClInclude Include="MapTile.h" />
     <ClInclude Include="MenuButton.h" />
     <ClInclude Include="Player.h" />
-    <ClInclude Include="RpgGameEngine.h" />
+    <ClInclude Include="RpgGameConstants.h" />
+    <ClInclude Include="RpgGameEngineOldCode.h" />
+    <ClInclude Include="RpgOverWorldScene.h" />
     <ClInclude Include="RpgWorldBuilderScene.h" />
     <ClInclude Include="SaveAttribute.h" />
     <ClInclude Include="SaveObject.h" />
