--- a/RPG/RPG/RPG.vcxproj
+++ b/RPG/RPG/RPG.vcxproj
@@ -147,6 +147,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AiUnit.cpp" />
+    <ClCompile Include="Animation.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="BaseGameEngine.cpp" />
     <ClCompile Include="GameMenu.cpp" />
@@ -170,6 +172,8 @@
     <ClCompile Include="ZonePortal.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AiUnit.h" />
+    <ClInclude Include="Animation.h" />
     <ClInclude Include="BaseGameEngine.h" />
     <ClInclude Include="GameMenu.h" />
     <ClInclude Include="GameScene.h" />
